# CherryScript

./: Basic Usage  CHANGELOG.md  CONTRIBUTING.md  Installation  Interactive Mode  README.md  image  pyproject.toml  requirements.txt  📦 Core Packages
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cherryscript/: __init__.py  parser.py
cherryscript/cli/: __init__.py
cherryscript/runtime/: __init__.py  adapters.py  interpreter.py
docs/: ROADMAP.md  SYNTAX_GUIDE.md
examples/: data_analysis.cherry  deploy_api.cherry  ml_pipeline.cherry  test.cherry
src/: cherryscript-__init__.py  cherryscript-adapters.py  cherryscript-interpreter.py  cherryscript-parser  cherryscript__init__.py
src/cherryscript/: parser.py
tests/: test_interpreter.py  test_parser.py
