[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cherryscript"
version = "1.0.0"
description = "A programming language for automated data collection, processing, and AI program creation"
authors = [{ name = "Cherry Computer Ltd." }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

# Core runtime dependencies (always installed)
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
db     = ["pymysql>=1.0.0"]
ml     = ["h2o>=3.36.0", "scikit-learn>=1.0.0"]
deploy = ["fastapi>=0.68.0", "uvicorn>=0.15.0", "pydantic>=1.9.0"]
dev    = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
]
all    = [
    "pymysql>=1.0.0",
    "h2o>=3.36.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.9.0",
]

[project.scripts]
cherryscript = "cherryscript.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cherryscript*"]
